<resources>
    <string name="app_name" translatable="false">Journeys</string>
    <string name="email" translatable="false">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notification">Notification</string>
    <string name="security_privacy">Security &amp; Privacy</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Are you sure you want to exit the app?</string>
    <string name="intro_slider_one">Explore the world</string>
    <string name="intro_slider_two">Plan the journey</string>
    <string name="intro_slider_three">Share the trip</string>
    <string name="intro_slider_one_desc">Embark on a journey of discovery as you explore stunning landscapes, vibrant cultures, and unforgettable adventures around the world.</string>
    <string name="intro_slider_two_desc">Get ready for the adventure of your dreams as you plan every detail of your trip, from exciting destinations to thrilling activities, creating memories that will last a lifetime.</string>
    <string name="intro_slider_three_desc">Invite your friends to join your journey and share unforgettable moments together. Let them be part of your adventures, creating memories for a lifetime.</string>
    <string name="skip_intro_slider">Get Started</string>
    <string name="back_intro_slider">Back</string>
    <string name="next_intro_slider">Next</string>
    <string name="no_acc">No account? Create one now!</string>
    <string name="yes_acc">Have an account? Login!</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_date">Trip Date</string>
    <string name="trip_description">Trip Description</string>
    <string name="add_photos">Add Photos</string>
    <string name="save_trip">Save Trip</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="login_error">Error logging in. Please check your credentials and try again.</string>
    <string name="login_succe">Login successful!</string>
    <string name="register_error">Error registering. Try again.</string>
    <string name="register_error_username_email">Username or email already exists. Try again.</string>
    <string name="register_succe">Registration successful!</string>
    <string name="fill_fields">Please, fill in all the fields!</string>
    <string name="update_error">Error updating profile. Try again.</string>
    <string name="username_exists_error">Username already exists. Try again.</string>
    <string name="update_succe">Profile updated successfully!</string>
    <string name="add_location">Add Location</string>
    <string name="add_location_btn">Add</string>
    <string name="home">Dashboard</string>
    <string name="password_requirements_text">The password must contain at least:</string>
    <string name="password_requirements_one">One uppercase letter</string>
    <string name="password_requirements_two">One lowercase letter</string>
    <string name="password_requirements_three">One number</string>
    <string name="password_requirements_four">One special character (@#$%^&amp;+=!_)</string>
    <string name="welcome">Welcome</string>
    <string name="register_desc">Bring your adventure to us!</string>
    <string name="login_desc">Please login with your credential!</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="password_invalid">Password invalid. Try Again!</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="edit_location">Edit Location</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="conf_pass">Confirm Password</string>

    <string name="load_error">Error loading details!</string>

    <string name="save_error">Error saving action!</string>
    <string name="save_succe">Action saved successfully!</string>
    <string name="succe">Success!</string>

    <string name="update_password_error">Error updating password. Try again!</string>
    <string name="update_password_succe">Password updated successfully!</string>
    <string name="old_password_verify_error">Error verifying old password. Try Again!</string>
    <string name="old_password_incorr">Old password is incorrect. Try Again!</string>
    <string name="new_password_error">New passwords do not match. Try Again!</string>
    <string name="new_password_same_as_old_error">New password cannot be the same as the old. Try Another!</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_description">Are you sure you want to proceed?</string>
    <string name="trip_delete_succ">Trip deleted successfully!</string>
    <string name="trip_delete_error">Error deleting trip. Try Again!</string>

    <string name="location_delete_succ">Location deleted successfully!</string>
    <string name="location_delete_error">Error deleting location. Try Again!</string>

    <string name="location_add_succ">Added location successfully!</string>
    <string name="location_add_error">Error adding location. Try Again!</string>

    <string name="no_users">No users!</string>

    <string name="toogle_users">Toggle users</string>
    <string name="toogle_locations">Toggle locations</string>

    <string name="photo_error">Not possible to add one of the photos. Max: 2MB</string>
    <string name="filter_by">Filter by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="rating">Rating</string>
    <string name="select_language">Select a Language</string>
    <string name="english" translatable="false">English</string>
    <string name="portugues" translatable="false">Português</string>

    <string name="invite_user_succe">User added successfully to the trip</string>
    <string name="invite_user_error">Error adding the user to the trip. Try Again!</string>
    <string name="invite_user">Please, enter an email</string>

    <string name="popup_title">Share Trip</string>
    <string name="popup_hint">Email/Username</string>
    <string name="popup_button">Share</string>

    <string name="user_not_found">User not Found</string>

    <string name="location">Location</string>
    <string name="current_loc">Current Location</string>
    <string name="selected_loc">Selected Location</string>
    <string name="select_date">Select date</string>
    <string name="selected_date_error">Selected date must be within the trip date range!</string>

    <string name="no_connection">You are disconneted from the E-World!</string>
</resources>