<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_card"
        android:padding="16dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="8dp" />

        <RadioGroup
            android:id="@+id/date_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/date_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/date_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/rating_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rating_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/rating_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
