<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ot.password_details">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/password_requirements_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_requirements_text"
                android:textColor="@color/black_white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/password_requirements_text_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_requirements_one"
                android:textColor="@color/security"
                android:textSize="16sp"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/password_requirements_text_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_requirements_two"
                android:textColor="@color/security"
                android:textSize="16sp"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/password_requirements_text_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_requirements_three"
                android:textColor="@color/security"
                android:textSize="16sp"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/password_requirements_text_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_requirements_four"
                android:textColor="@color/security"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
