<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="center"
            android:paddingBottom="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/popup_hint"
            app:boxStrokeColor="@color/border_add_user"
            app:hintTextColor="@color/border_add_user"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/popup_button"
            android:backgroundTint="@color/colorTripCard"
            style="@style/Widget.MaterialComponents.Button"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
