<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".fragment.location.edit_location.edit_location">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:padding="14dp"
            android:src="@drawable/btn_backward" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto"
            android:text="@string/edit_location"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:focusable="false"
                    android:clickable="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <Spinner
                android:id="@+id/location_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:padding="8dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/white"
                android:dropDownVerticalOffset="40dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/rating"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <RatingBar
                    android:id="@+id/location_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center"
                    android:theme="@style/RatingBar" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photos"
                android:padding="10dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp" >

                <GridView
                    android:id="@+id/photos_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:padding="5dp"
                    tools:ignore="NestedScrolling" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/security"
                    android:layout_marginEnd="10dp" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
